// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalUserStatusComponent matches snapshot 1`] = `
<div
  className="usa-grid-full cdo-container"
>
  <div
    className="usa-grid-full cdo-container-inner section-padded-inner-container"
  >
    <div
      className="profile-picture-container"
    >
      <FontAwesome
        className="fa-2x"
        name="street-view"
      />
    </div>
    <div
      className="cdo-text-container"
    >
      <div
        className="usa-grid-full"
      >
        <div
          className="usa-width-one-whole cdo-header"
        >
          Career Development Officer
        </div>
        <div
          className="usa-width-one-whole cdo-name"
        >
          <span
            className="cdo-name-text"
          >
            John Doe
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExternalUserStatusComponent matches snapshot when showMail is true 1`] = `
<div
  className="usa-grid-full cdo-container"
>
  <div
    className="usa-grid-full cdo-container-inner section-padded-inner-container"
  >
    <div
      className="profile-picture-container"
    >
      <FontAwesome
        className="fa-2x"
        name="street-view"
      />
    </div>
    <div
      className="cdo-text-container"
    >
      <div
        className="usa-grid-full"
      >
        <div
          className="usa-width-one-whole cdo-header"
        >
          Career Development Officer
        </div>
        <div
          className="usa-width-one-whole cdo-name"
        >
          <span
            className="cdo-name-text"
          >
            John Doe
          </span>
          <MailToButton
            email=""
            textAfter=""
            textBefore=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
